{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 1180,
  "lineage": "9b4f1860-4bd8-c804-b749-495ff582f4da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-08ec697a1c2435c53",
            "domain": "vpc",
            "id": "eipalloc-0bae0659d3b540c9f",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0b05ffb6f3012e8e3",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-15-188-219-164.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.219.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eschool-gateway",
            "aws_network_interface.lb-interface",
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0de6b82508ebc1d7a",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-135-99.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.135.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eschool-gateway",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6aecf0f0425f42a",
            "arn": "arn:aws:ec2:eu-west-3:443172575185:instance/i-08688a0fc0e443992",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08688a0fc0e443992",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SoftServeKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-000566015b1a90eb5"
              }
            ],
            "primary_network_interface_id": "eni-000566015b1a90eb5",
            "private_dns": "ip-10-0-1-5.eu-west-3.compute.internal",
            "private_ip": "10.0.1.5",
            "public_ip": "52.47.105.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099e0903fdd904774",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8e619614998f4fb",
            "tags": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9d5bf6081b5b6fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.bastion-network-interface",
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eSchool-Backend1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6aecf0f0425f42a",
            "arn": "arn:aws:ec2:eu-west-3:443172575185:instance/i-06cd507483b5b0965",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cd507483b5b0965",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SoftServeKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-08de86fc8d787fbe8"
              }
            ],
            "primary_network_interface_id": "eni-08de86fc8d787fbe8",
            "private_dns": "ip-10-0-2-10.eu-west-3.compute.internal",
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2a2110efcd6e13e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dd27995a3cd2c99",
            "tags": {
              "Name": "eSchoolBE1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9d5bf6081b5b6fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.eSchool-Backend1-interface",
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-two",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eSchool-Backend2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6aecf0f0425f42a",
            "arn": "arn:aws:ec2:eu-west-3:443172575185:instance/i-070b1cbdd3cc415e4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070b1cbdd3cc415e4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SoftServeKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-089fdbc874203777c"
              }
            ],
            "primary_network_interface_id": "eni-089fdbc874203777c",
            "private_dns": "ip-10-0-3-10.eu-west-3.compute.internal",
            "private_ip": "10.0.3.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1c35b660001ed48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09949b7a4dc10847e",
            "tags": {
              "Name": "eSchoolBE2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9d5bf6081b5b6fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.eSchool-Backend2-interface",
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-three",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eSchool-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6aecf0f0425f42a",
            "arn": "arn:aws:ec2:eu-west-3:443172575185:instance/i-0d66526b43decd85c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d66526b43decd85c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SoftServeKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b05ffb6f3012e8e3"
              }
            ],
            "primary_network_interface_id": "eni-0b05ffb6f3012e8e3",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "15.188.219.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f0dc9cacee3efa6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8e619614998f4fb",
            "tags": {
              "Name": "eSchoolLB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9d5bf6081b5b6fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.lb-interface",
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mariaDB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6aecf0f0425f42a",
            "arn": "arn:aws:ec2:eu-west-3:443172575185:instance/i-0081c568b4ae583b8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0081c568b4ae583b8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SoftServeKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d70c1fcd433ad57c"
              }
            ],
            "primary_network_interface_id": "eni-0d70c1fcd433ad57c",
            "private_dns": "ip-10-0-2-100.eu-west-3.compute.internal",
            "private_ip": "10.0.2.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0740c52af9c6fdcce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dd27995a3cd2c99",
            "tags": {
              "Name": "MariaDB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9d5bf6081b5b6fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.database-mariadb-interface",
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-two",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eschool-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:443172575185:internet-gateway/igw-0a657a1428257e533",
            "id": "igw-0a657a1428257e533",
            "owner_id": "443172575185",
            "tags": {
              "Name": "EschoolInternetGateway"
            },
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "dependencies": [
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eschool-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de6b82508ebc1d7a",
            "id": "nat-028ce769473d30d65",
            "network_interface_id": "eni-0ebfd64349b0bc410",
            "private_ip": "10.0.1.96",
            "public_ip": "13.36.135.99",
            "subnet_id": "subnet-0d8e619614998f4fb",
            "tags": {
              "Name": "eschool-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat-elastic-ip",
            "aws_internet_gateway.eschool-gateway",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bastion-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-000566015b1a90eb5",
            "ipv6_address_count": 0,
            "mac_address": "06:6a:89:16:60:16",
            "private_ip": "10.0.1.5",
            "private_ips": [
              "10.0.1.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9d5bf6081b5b6fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8e619614998f4fb"
          },
          "dependencies": [
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "database-mariadb-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0d70c1fcd433ad57c",
            "ipv6_address_count": 0,
            "mac_address": "0a:36:ad:62:26:94",
            "private_ip": "10.0.2.100",
            "private_ips": [
              "10.0.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9d5bf6081b5b6fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dd27995a3cd2c99"
          },
          "dependencies": [
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-two",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eSchool-Backend1-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-08de86fc8d787fbe8",
            "ipv6_address_count": 0,
            "mac_address": "0a:b6:77:92:29:36",
            "private_ip": "10.0.2.10",
            "private_ips": [
              "10.0.2.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9d5bf6081b5b6fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dd27995a3cd2c99"
          },
          "dependencies": [
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-two",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eSchool-Backend2-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-089fdbc874203777c",
            "ipv6_address_count": 0,
            "mac_address": "0e:2b:b9:eb:b2:56",
            "private_ip": "10.0.3.10",
            "private_ips": [
              "10.0.3.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9d5bf6081b5b6fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09949b7a4dc10847e"
          },
          "dependencies": [
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-three",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "lb-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b05ffb6f3012e8e3",
            "ipv6_address_count": 0,
            "mac_address": "06:f6:3a:c6:08:4c",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9d5bf6081b5b6fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8e619614998f4fb"
          },
          "dependencies": [
            "aws_security_group.eSchool-internal",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eSchool-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-025654ba0d658058f",
            "owner_id": "443172575185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a657a1428257e533",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EschoolRouteTable"
            },
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eschool-gateway",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet-two-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-096961f005f65524b",
            "owner_id": "443172575185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-028ce769473d30d65",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "subnet-two-route-table"
            },
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-elastic-ip",
            "aws_internet_gateway.eschool-gateway",
            "aws_nat_gateway.eschool-nat",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09824ae964752102f",
            "route_table_id": "rtb-025654ba0d658058f",
            "subnet_id": "subnet-0d8e619614998f4fb"
          },
          "dependencies": [
            "aws_internet_gateway.eschool-gateway",
            "aws_route_table.eSchool-route-table",
            "aws_subnet.subnet-one",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01225950120fae794",
            "route_table_id": "rtb-096961f005f65524b",
            "subnet_id": "subnet-08dd27995a3cd2c99"
          },
          "dependencies": [
            "aws_eip.nat-elastic-ip",
            "aws_internet_gateway.eschool-gateway",
            "aws_nat_gateway.eschool-nat",
            "aws_route_table.subnet-two-route-table",
            "aws_subnet.subnet-one",
            "aws_subnet.subnet-two",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537f42ac95288113",
            "route_table_id": "rtb-096961f005f65524b",
            "subnet_id": "subnet-09949b7a4dc10847e"
          },
          "dependencies": [
            "aws_eip.nat-elastic-ip",
            "aws_internet_gateway.eschool-gateway",
            "aws_nat_gateway.eschool-nat",
            "aws_route_table.subnet-two-route-table",
            "aws_subnet.subnet-one",
            "aws_subnet.subnet-three",
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eSchool-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:443172575185:security-group/sg-0c9d5bf6081b5b6fe",
            "description": "Input and output internally",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9d5bf6081b5b6fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow internal communication in eschool_vpc",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow internal communication in eschool_vpc",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "eSchoolSecurityGroup",
            "name_prefix": "",
            "owner_id": "443172575185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eSchoolSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:443172575185:subnet/subnet-0d8e619614998f4fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d8e619614998f4fb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443172575185",
            "tags": {
              "Name": "EschoolMainSubnet"
            },
            "tags_all": {
              "Name": "EschoolMainSubnet"
            },
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "dependencies": [
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:443172575185:subnet/subnet-09949b7a4dc10847e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09949b7a4dc10847e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443172575185",
            "tags": {
              "Name": "EschoolPrivateSubnet"
            },
            "tags_all": {
              "Name": "EschoolPrivateSubnet"
            },
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "dependencies": [
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:443172575185:subnet/subnet-08dd27995a3cd2c99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08dd27995a3cd2c99",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443172575185",
            "tags": {
              "Name": "EschoolPrivateSubnet"
            },
            "tags_all": {
              "Name": "EschoolPrivateSubnet"
            },
            "vpc_id": "vpc-0dec802981ceea0bc"
          },
          "dependencies": [
            "aws_vpc.eschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eschool_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:443172575185:vpc/vpc-0dec802981ceea0bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c7f5fa9c9b25f81",
            "default_route_table_id": "rtb-0332e922a63d7e25c",
            "default_security_group_id": "sg-02ec568a33ac92f55",
            "dhcp_options_id": "dopt-cb25cea3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dec802981ceea0bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0332e922a63d7e25c",
            "owner_id": "443172575185",
            "tags": {
              "Name": "ESchoolVPC"
            },
            "tags_all": {
              "Name": "ESchoolVPC"
            }
          }
        }
      ]
    }
  ]
}